syntax = "proto3";

package vehicle;

service Vehicle {
    rpc GetNearVehicles (UserLocationRequest) returns (stream NearVehicleResponse) {}
}

message UserLocationRequest {
    string user_id = 1;
    Location location = 2;
    double vehicle_level = 3; ## filter by car type
}

message NearVehicleResponse {
    repeated Vehicle vehicle=1;
}

message Vehicle {
    string vehicle_id = 1;
    Location location = 2;
    double fuel = 3;
}

message Location {
    double latitude = 1;
    double longitude = 2;
}